markup, add scroll to collapsed tree, fix select all

--- a/src/css/ant.less
+++ b/src/css/ant.less
@@ -54,7 +54,10 @@
   }
 
   &-switcher {
-    width: 28px;
+    width: unset;
+    margin-left: 12px;
+    margin-right: 8px;
+    padding-top: 4px;
 
     & svg.ant-tree-switcher-icon {
       transform: rotate(180deg);
