--- a/src/css/locatorsList.less
+++ b/src/css/locatorsList.less
@@ -42,6 +42,10 @@
         }
       }
 
+      svg {
+        margin: auto;
+      }
+
       &-buttons {
         display: flex;
         flex-wrap: nowrap;
